Refactor index.html for Color Scanner Accounts
Updated the HTML structure and styles for the Color Scanner Accounts application, changing the title and layout. Added functionality for account management and color scanning.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Color Scanner Accounts</title>
+<title>ticket bank :)</title>
 <style>
 /* -------------------- Body & Layout -------------------- */
 body {
@@ -400,3 +400,4 @@ deleteAcctBtn.addEventListener('click',()=>{
 </script>
 </body>
 </html>
+
