i changed the name

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ label { display:block; margin-top:8px; font-size:13px; color:#333; }
 </style>
 </head>
 <body>
-<h1>Color Scanner Accounts</h1>
+<h1>ticket bank :)!!!</h1>
 <p class="muted">Students: scan the color inside the red square to see your account and balance. Teachers: log in to manage accounts.</p>
 
 <div id="app">
@@ -400,4 +400,5 @@ deleteAcctBtn.addEventListener('click',()=>{
 </script>
 </body>
 </html>
+
 
